changes from discussions
