# go-routesapi/models/model_traffic_manager.go
@@ -1,0 +1,162 @@
+/*
+Signadot Routes API
+
+The Routes API provides access to in-cluster routing configuration set up by  the Signadot Operator. 
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package models
+
+import (
+	"encoding/json"
+)
+
+// checks if the TrafficManager type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &TrafficManager{}
+
+// TrafficManager Traffic Manager based routing specification for this workload port
+type TrafficManager struct {
+	Next *Location `json:"next,omitempty"`
+	Must *bool `json:"must,omitempty"`
+}
+
+// NewTrafficManager instantiates a new TrafficManager object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewTrafficManager() *TrafficManager {
+	this := TrafficManager{}
+	return &this
+}
+
+// NewTrafficManagerWithDefaults instantiates a new TrafficManager object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewTrafficManagerWithDefaults() *TrafficManager {
+	this := TrafficManager{}
+	return &this
+}
+
+// GetNext returns the Next field value if set, zero value otherwise.
+func (o *TrafficManager) GetNext() Location {
+	if o == nil || IsNil(o.Next) {
+		var ret Location
+		return ret
+	}
+	return *o.Next
+}
+
+// GetNextOk returns a tuple with the Next field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *TrafficManager) GetNextOk() (*Location, bool) {
+	if o == nil || IsNil(o.Next) {
+		return nil, false
+	}
+	return o.Next, true
+}
+
+// HasNext returns a boolean if a field has been set.
+func (o *TrafficManager) HasNext() bool {
+	if o != nil && !IsNil(o.Next) {
+		return true
+	}
+
+	return false
+}
+
+// SetNext gets a reference to the given Location and assigns it to the Next field.
+func (o *TrafficManager) SetNext(v Location) {
+	o.Next = &v
+}
+
+// GetMust returns the Must field value if set, zero value otherwise.
+func (o *TrafficManager) GetMust() bool {
+	if o == nil || IsNil(o.Must) {
+		var ret bool
+		return ret
+	}
+	return *o.Must
+}
+
+// GetMustOk returns a tuple with the Must field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *TrafficManager) GetMustOk() (*bool, bool) {
+	if o == nil || IsNil(o.Must) {
+		return nil, false
+	}
+	return o.Must, true
+}
+
+// HasMust returns a boolean if a field has been set.
+func (o *TrafficManager) HasMust() bool {
+	if o != nil && !IsNil(o.Must) {
+		return true
+	}
+
+	return false
+}
+
+// SetMust gets a reference to the given bool and assigns it to the Must field.
+func (o *TrafficManager) SetMust(v bool) {
+	o.Must = &v
+}
+
+func (o TrafficManager) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o TrafficManager) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Next) {
+		toSerialize["next"] = o.Next
+	}
+	if !IsNil(o.Must) {
+		toSerialize["must"] = o.Must
+	}
+	return toSerialize, nil
+}
+
+type NullableTrafficManager struct {
+	value *TrafficManager
+	isSet bool
+}
+
+func (v NullableTrafficManager) Get() *TrafficManager {
+	return v.value
+}
+
+func (v *NullableTrafficManager) Set(val *TrafficManager) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableTrafficManager) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableTrafficManager) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableTrafficManager(val *TrafficManager) *NullableTrafficManager {
+	return &NullableTrafficManager{value: val, isSet: true}
+}
+
+func (v NullableTrafficManager) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableTrafficManager) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
