# go-routesapi/models/model_workload_port_mapping.go
@@ -24,7 +24,7 @@ type WorkloadPortMapping struct {
 	// Workload port
 	WorkloadPort int32 `json:"workloadPort"`
 	Destinations []Location `json:"destinations,omitempty"`
-	TrafficRules []string `json:"trafficRules,omitempty"`
+	TrafficManager *TrafficManager `json:"trafficManager,omitempty"`
 }
 
 type _WorkloadPortMapping WorkloadPortMapping
@@ -103,36 +103,36 @@ func (o *WorkloadPortMapping) SetDestinations(v []Location) {
 	o.Destinations = v
 }
 
-// GetTrafficRules returns the TrafficRules field value if set, zero value otherwise.
-func (o *WorkloadPortMapping) GetTrafficRules() []string {
-	if o == nil || IsNil(o.TrafficRules) {
-		var ret []string
+// GetTrafficManager returns the TrafficManager field value if set, zero value otherwise.
+func (o *WorkloadPortMapping) GetTrafficManager() TrafficManager {
+	if o == nil || IsNil(o.TrafficManager) {
+		var ret TrafficManager
 		return ret
 	}
-	return o.TrafficRules
+	return *o.TrafficManager
 }
 
-// GetTrafficRulesOk returns a tuple with the TrafficRules field value if set, nil otherwise
+// GetTrafficManagerOk returns a tuple with the TrafficManager field value if set, nil otherwise
 // and a boolean to check if the value has been set.
-func (o *WorkloadPortMapping) GetTrafficRulesOk() ([]string, bool) {
-	if o == nil || IsNil(o.TrafficRules) {
+func (o *WorkloadPortMapping) GetTrafficManagerOk() (*TrafficManager, bool) {
+	if o == nil || IsNil(o.TrafficManager) {
 		return nil, false
 	}
-	return o.TrafficRules, true
+	return o.TrafficManager, true
 }
 
-// HasTrafficRules returns a boolean if a field has been set.
-func (o *WorkloadPortMapping) HasTrafficRules() bool {
-	if o != nil && !IsNil(o.TrafficRules) {
+// HasTrafficManager returns a boolean if a field has been set.
+func (o *WorkloadPortMapping) HasTrafficManager() bool {
+	if o != nil && !IsNil(o.TrafficManager) {
 		return true
 	}
 
 	return false
 }
 
-// SetTrafficRules gets a reference to the given []string and assigns it to the TrafficRules field.
-func (o *WorkloadPortMapping) SetTrafficRules(v []string) {
-	o.TrafficRules = v
+// SetTrafficManager gets a reference to the given TrafficManager and assigns it to the TrafficManager field.
+func (o *WorkloadPortMapping) SetTrafficManager(v TrafficManager) {
+	o.TrafficManager = &v
 }
 
 func (o WorkloadPortMapping) MarshalJSON() ([]byte, error) {
@@ -149,8 +149,8 @@ func (o WorkloadPortMapping) ToMap() (map[string]interface{}, error) {
 	if !IsNil(o.Destinations) {
 		toSerialize["destinations"] = o.Destinations
 	}
-	if !IsNil(o.TrafficRules) {
-		toSerialize["trafficRules"] = o.TrafficRules
+	if !IsNil(o.TrafficManager) {
+		toSerialize["trafficManager"] = o.TrafficManager
 	}
 	return toSerialize, nil
 }
